--- a/my_project.css
+++ b/my_project.css
@@ -19,6 +19,7 @@ body {
  .header {
     display: flex;
     background-color:#333;
+    border-radius: 20px 20px 0px 0px;
     color: white;
     text-align: start;
     padding: 10px 50px;
@@ -76,6 +77,7 @@ main {
     flex: 80%;
     border-radius: 10px;
     margin: 10px;
+    text-align: justify;
 }
 
 .dropDownList {
@@ -248,38 +250,48 @@ main {
     font-size: 28px;
     text-align: end;
     color: #fff;
-    margin: -20px 60px 0px 0px; 
-}
-
-.articleHeader {
-    margin-top: 20px;
-    padding: 10% 0;
+    padding: 10px;
 }
 
 .articleHeaderImage {
-    background-image: url(../assets/iot.jpeg);
+    margin-top: 20px;
+   /*  padding: 10% 0; */
+    background-image: url(../assets1/science.jpeg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    border-radius: 10px;
     height: 350px;
     width:auto;
 }
 
+.responsiveVideo {
+    display: block;
+    width: 100%;
+    height: auto;
+    border-radius: 10px 10px 10px 10px;
+}
+
+.videoContainer {
+    background-color: #aaa;
+    padding: 10px;
+    margin: 0px;
+}
+
+h3 {
+    font-size: 1.7em;
+    text-align: start;
+    /*padding-right: 80px; */
+  }
+
 .sectionStyle {
     margin: 50px 0px 0px 0px;
-    text-align: justify;
 }
 
 .articlesP {
     font-size: 1em;
     color: red;
     margin: 32px 0px 32px 0px;
-  }
-
-.sectionStyle > h3 {
-    font-size: 1.7em;
-    text-align: start;
-    /*padding-right: 80px; */
   }
 
   .sectionStyle > h4 {
@@ -304,8 +316,6 @@ main {
     margin-bottom: 50px;
 } */
 
-
-
 .responsiveImage {
     display: block;
     width: 20%;
@@ -317,8 +327,57 @@ main {
 
 
 
-/* ----- Footer ----- */
-#footerStyle {
+/* ----- Footer float----- */
+.footer{
+    background-color: grey;
+    padding: 12px;
+    color: white;
+    border-radius: 0px 0px 20px 20px;;
+}
+
+#innerFooterContainer {
+    margin-left: 8px;
+    float:right;
+}
+
+#innerFooterContainer > a {
+    margin-left: 6px;
+    margin-right: 6px;
+}
+
+#innerFooter2Container {
+    float: right;
+}
+
+.footer::after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+/* ----- footer flexbox ----- */
+/* .footer {
+    display: flex;
+    background-color: grey;
+    padding: 12px;
+    color: white;
+    border-radius: 0px 0px 20px 20px;;
+}
+
+#innerFooterContainer {
+    margin-left: auto;
+}
+
+#innerFooterContainer > a {
+    margin-left: 6px;
+    margin-right: 6px;
+}
+
+#innerFooter2Container {
+    margin-left: 8px;
+} */
+
+/* #footerStyle {
     background-color: rgb(223, 221, 221);
     text-align: center;
     padding: 8px;
@@ -328,7 +387,7 @@ main {
 #footerStyle > p {
     margin: 6px;
 }
-
+ */
 
 
 /* ----- Run time ----- */
