--- a/my_project.css
+++ b/my_project.css
@@ -1,10 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;400&family=Nerko+One&family=Noto+Sans+Chakma&family=Noto+Serif&display=swap');
 
 /* ----- general style ----- */
-:root {
-    --ligthgrey-color: rgb(234, 233, 233);
-}
-
 * {
     box-sizing: border-box;
 }
@@ -16,30 +12,42 @@ body {
 
 
  /* ----- Header ----- */
- .header {
+ header {
     display: flex;
-    background-color:#333;
-    border-radius: 20px 20px 0px 0px;
+    background-color: var(--bs-dark);
     color: white;
-    text-align: start;
-    padding: 10px 50px;
+    /* text-align: center; */
+    /* padding: 10% 3%; */
 }
 
-.header > p {
-    color: #fff;
+h1 {
+    color: white;
     text-transform: capitalize;
     font-size: 3em;
-    margin: 0px;
-    padding-right: 10px;
+    margin: 20px 20px 20px 20px;
+    align-self: center;
+} 
+
+h2 {
+    margin-top: 80px;
+    align-self: center;
 }
 
-.header > h1 {
-    font-size: 1em;
-    margin: 0;
-    padding-top: 30px;
+.btn-rounded-white {
+    border: 1px solid white;
+    border-radius: 30px;
+    align-self: center;
+    margin: 20px 20px 0px 0px;
+    margin-left: auto;
+    padding: 10px 20px 10px 20px;
 }
 
-.header > form {
+header > a {
+    text-decoration: none;
+    color: white;
+}
+
+/* .header > form {
     cursor: pointer;
     padding-top: 30px;
     margin-left: auto;
@@ -48,31 +56,56 @@ body {
 .form > :first-child {
     margin-right: 20px;
     font-size: larger;
-}
+} */
 
 
 
 /* ----- Main ----- */
 main {
     display: flex;
-    border: 1px solid var(--ligthgrey-color);
+    border: 1px solid var(--bs-gray-200);
     border-radius: 10px;
-    margin: 10px;
+    margin: 30px 10px 10px 10px;
 }
 
 .aside20 {
-    display: flex;
+    display: block;
     flex-direction: column;
-    padding: 80px 10px 10px 10px;
-    flex: 20%;
-    align-items: center;
-    border: 1px solid var(--ligthgrey-color);
+    padding: 30px 10px 10px 10px;
+    flex: 25%;
+    text-align: center;
+    border: 1px solid var(--bs-gray-200);
     border-radius: 10px;
     margin: 10px;
 }
 
+.aside20 > p {
+    margin-top: 80px;
+    font-style: italic;
+}
+
+.aside20 > p:first-child {
+    margin-top: 20px;
+}
+
+.aside20 > div ul li {
+    list-style-type: none;
+}
+
+.aside20 > div ul h3 {
+    font-size: calc(1rem + 0.2vw);
+    margin-top: 40px;
+    text-decoration: underline;
+}
+
+.responsiveImg {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
 .section80 {
-    border: 1px solid var(--ligthgrey-color);
+    border: 1px solid var(--bs-gray-200);
     padding: 10px 50px 10px 50px;
     flex: 80%;
     border-radius: 10px;
@@ -88,130 +121,13 @@ main {
 
 
 
-/* ----- Sidebar-20 Hamburger ----- */
-#hamburgerContainer {
-    display: flex;
-    flex-direction: row;
-}
-
-.hamburger {
-    display: block;
-    padding-top: 0px;
-    cursor: pointer;
-}
-
-.rect1, .rect2 {
-    width: 16px;
-    height: 2px;
-    background-color: #555;
-    transition: 0.5s;
-    
-}
-.rect1 {
-    margin-left: 60px;
-    margin-top: 10px;
-}
-
-.rect2 {
-    transform: rotate(90deg) translate(-8px, 6px);
-    -webkit-transform: rotate(90deg) translate(-8px, 6px); 
-    margin-top: 6px;
-    margin-left: 66px;
-} 
-
-.changeHamburgerIcon .rect1 {
-    background-color: red;
-}
-
-.changeHamburgerIcon .rect2 {
-    opacity: 0;
-}
-
-#innerNavbarContainer {
-    padding: 3px 25px;
-    min-width: 130px;
-    background-color: rgb(246, 245, 245);
-}
-
-#innerNavbarContainer > a {
-    list-style-type: none;
-    text-decoration: none;
-    color: #555;
-    padding: 5px;
-}
-
-.showInnerNavbar {
-    display:flex;
-    flex-direction: column;
-
-}
-
-.hideInnerNavbar {
-    display: none;
-}
-
-/* ----- Container Adv------ */
-/* .advContainer{
-    padding: 30px 80px;
-    width: auto;
-    height: 200px;
-    border: 0.5px solid #aaa;
-    position: relative;
-    top: 200px;
-}
-
-.adv {
-    position: relative;
-    text-align: center;
-} */
-
-/* #timer {
-    text-align: center; 
-}
- */
- 
-/* #styleAbbreviation {
-    text-align: center;
-    font-size: 3em;
-    font-weight: 500;
-    color: #fff;
-} */
-
-
-
 /* ----- NAV ----- */
-.nav {
+.navBar {
     display: flex;
-}
-
-.mainBar {
-    display: flex;
-    padding: 0px;
-    margin: 20px 10px 10px 50px;
-    list-style-type: none;
-    /* justify-content: space-evenly; */
-  }
-
-.mainBar > li {
-    width: 150px;
-    background-color: rgb(245, 242, 242);
-   /* flex: 10%;  *//* == flex-grow:1, flex-shrink:1, flex-basis:25% */
-}
-
-.mainBar > li a {
-    display: block;
-    padding: .5em 1em;
-    text-decoration: none;
-    text-transform:uppercase;
-    color: #000;
-    text-align: center;
-    border: 1px solid rgb(178, 177, 177);
-    border-radius: 2px;
-    /* background-color: rgb(1, 250, 34); */
-}
-
-.mainBar > li a:hover {
-    background-color: rgba(0, 175, 79, 0.772);
+    flex-direction: column;
+    margin-bottom: 20px;
+    border-radius: 0px 0px 25px 25px;
+    background-color: var(--bs-orange);
 }
 
 .registerLoginBar {
@@ -245,12 +161,132 @@ main {
 }
 
 
-/* ------ Article ------ */
-.styleH2 {
-    font-size: 28px;
-    text-align: end;
-    color: #fff;
+/* ----- Sidebar-20 Hamburger ----- */
+#hamburgerContainer {
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    margin-left: auto;
     padding: 10px;
+}
+
+.rect1, .rect2, .rect3 {
+    width: 29px;
+    height: 3px;
+    background-color: var(--bs-dark);
+    margin: 4px 0px;
+    transition: 0.5s;
+}
+
+.changeHamburgerIcon .rect1 {
+    transform: rotate(-45deg) translate(-8px, 6px);
+    -webkit-transform: rotate(-45deg) translate(-8px, 6px);
+}
+
+.changeHamburgerIcon .rect2 {
+    opacity: 0;
+}
+
+.changeHamburgerIcon .rect3 {
+    transform: rotate(45deg) translate(-8px, -6px);
+    -webkit-transform: rotate(45deg) translate(-8px, -6px);
+}
+
+#innerNavbarContainer {
+    /* display: flex; */
+    padding: 10px;
+    /* margin: 20px 10px 10px 50px; */
+    justify-content: start;
+  }
+
+#innerNavbarContainer > a {
+    font-size: 1.1em;
+    padding: 14px 20px;
+    color: var(--darkgrey-color);
+    text-decoration: none;
+    border-radius: 10px;
+    /* text-align: center; */
+}
+
+#innerNavbarContainer > a:hover {
+    background-color: #ddd;
+    color: #000;
+}
+
+.hideInnerNavbar {
+    display: none;
+}
+
+.showInnerNavbar {
+    display: flex;
+}
+
+/* .mainBar > li {
+    width: 150px;
+    background-color: rgb(245, 242, 242);
+   /* flex: 10%;  *//* == flex-grow:1, flex-shrink:1, flex-basis:25% */
+/* } */
+
+.mainBar > a {
+    display: block;
+    /* padding: .5em 1em; */
+    /* text-decoration: none; */
+    /* text-transform:uppercase; */
+    color: var(--blue-color);
+    /* text-align: center; */
+   /*  border: 1px solid rgb(178, 177, 177);
+    border-radius: 2px; */
+    /* background-color: rgb(1, 250, 34); */
+}
+
+.mainBar > li a:hover {
+    background-color: rgba(0, 175, 79, 0.772);
+}
+
+/* ----- Container Adv------ */
+/* .advContainer{
+    padding: 30px 80px;
+    width: auto;
+    height: 200px;
+    border: 0.5px solid #aaa;
+    position: relative;
+    top: 200px;
+}
+
+.adv {
+    position: relative;
+    text-align: center;
+} */
+
+/* #timer {
+    text-align: center; 
+}
+ */
+ 
+/* #styleAbbreviation {
+    text-align: center;
+    font-size: 3em;
+    font-weight: 500;
+    color: #fff;
+} */
+
+
+
+/* ------ Article ------ */
+.section80 article > header {
+    padding-bottom: 10px;
+}
+
+.sectionStyle > h3 {
+    font-size: calc(1rem + .4vw);
+    /* align-self: center; */
+    color: black;
+}
+
+
+
+h5 {
+    margin-top: 48px;
 }
 
 .articleHeaderImage {
@@ -278,11 +314,11 @@ main {
     margin: 0px;
 }
 
-h3 {
+/* h3 {
     font-size: 1.7em;
     text-align: start;
     /*padding-right: 80px; */
-  }
+ /* } */
 
 .sectionStyle {
     margin: 50px 0px 0px 0px;
@@ -294,9 +330,10 @@ h3 {
     margin: 32px 0px 32px 0px;
   }
 
-  .sectionStyle > h4 {
-    font-size: 1.3em;
+h4 {
+    font-size: calc(1rem + .3vw);
     margin-bottom: 0px;
+    font-style: italic
 }
 
 .sectionStyle > hr {
@@ -315,26 +352,28 @@ h3 {
    /* margin-top: 0px;
     margin-bottom: 50px;
 } */
-
 .responsiveImage {
     display: block;
-    width: 20%;
+    width: 30%;
     height: auto;
     border-radius: 20px;
     float: left;
     padding: 10px;
 } 
 
-
-
 /* ----- Footer float----- */
-.footer{
-    background-color: grey;
-    padding: 12px;
-    color: white;
-    border-radius: 0px 0px 20px 20px;;
+.footer {
+    background-color: var(--bs-orange);
+    padding: 20px;
+    border-radius: 20px 20px 0px 0px;
 }
 
+.nav-link {
+    color: black;
+    padding: 0px 10px 0px 10px;
+}
+
+/*
 #innerFooterContainer {
     margin-left: 8px;
     float:right;
@@ -353,7 +392,7 @@ h3 {
     content: "";
     display: block;
     clear: both;
-}
+} */
 
 /* ----- footer flexbox ----- */
 /* .footer {
@@ -417,14 +456,10 @@ h3 {
 /* ----- Mediaquerry ----- */
 
 @media (max-width: 992px) {
-    .articleHeader > h3 {
+    /* .articleHeader > h3 {
         font-size: 1.6em;
         padding-right: 10px;
-    }
-
-    .nav {
-        flex-direction: column;
-    }
+    } */
 
     .registerLoginBar {
         margin: 30px 0px 20px 60px;
@@ -433,13 +468,13 @@ h3 {
 
 
 @media (max-width: 768px) {
-    .header > h1 {
+ /*    .header > h1 {
         opacity: 0;
     }
 
     .header > form {
         margin-left: 0px;
-    }
+    } */
 
     .nav {
         flex-direction: column;
@@ -463,15 +498,15 @@ h3 {
         padding: 10px;
     }
 
-    .articleHeader > h3 {
+ /*    .articleHeader > h3 {
         font-size: 1.2em;
         padding-right: 10px;
-    }
+    } */
 }
 
 
 @media (max-width: 576px) {
-    .header {
+  /*   .header {
         flex-direction: column;
     }
 
@@ -488,7 +523,7 @@ h3 {
         font-size: 14px;
         padding-top: 5px;
     }
-
+ */
     .form > :first-child {
         margin-right: 5px;
         font-size: smaller;
@@ -523,9 +558,9 @@ h3 {
          flex-direction: column;
     }
 
-    h3 {
+  /*   h3 {
         font-size: 1.3em;
-    }
+    } */
 
     .sectionStyle {
         font-size: 1em;
@@ -535,18 +570,18 @@ h3 {
         display: none;
     }
 
-    .articleHeader > h3 {
+   /*  .articleHeader > h3 {
         font-size: 1em;
         padding-right: 10px;
     }
-
+ */
     .articleHeader > div {
         font-size: 14px;
     }
 
-    .sectionStyle > h4 {
+   /*  .sectionStyle > h4 {
         font-size: 16px;
-    }
+    } */
 
     .sectionStyle > p {
         font-size: 14px;
